plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

application {
    mainClass = 'com.app.Launcher'
    mainModule = 'com.app'
}

javafx {
    version = "21"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.web']
}

task prepareJPackageInput(type: Copy) {
    dependsOn build
    
    from configurations.runtimeClasspath 
    from jar 
    from("dist") {
        include "PdfPrinter.exe"
    }

    into "$buildDir/jpackage-input"
}

task createInstaller(type: Exec) {
    dependsOn prepareJPackageInput

    def outputDir = "$buildDir/jpackage-output"
    def inputDir = "$buildDir/jpackage-input"
    def mainJarName = jar.archiveFileName.get()

    commandLine 'jpackage',
            '--type', 'msi',                       
            '--dest', outputDir,                  
            '--input', inputDir,                   
            '--name', 'SE320App',                  
            '--main-class', application.mainClass.get(), 
            '--main-jar', mainJarName,             
            '--app-version', '1.0.0',              
            '--vendor', 'mejunga',                 
            '--win-dir-chooser',                   
            '--win-menu',                          
            '--win-shortcut',                     
            '--java-options', '--enable-preview'
            
    doFirst {
        delete outputDir
        mkdir outputDir
    }
    
    doLast {
        println "Installer succesfully created at ${outputDir}"
    }
}